--- a/css/main2.css
+++ b/css/main2.css
@@ -771,8 +771,8 @@ header {
         background-image: url(../img/kaleidoscope.png);
     }
 
-    .cww {
-        background-image: url(../img/CoolWWD.png);
+    .goeuro {
+        background-image: url(../img/goeuro.png);
         background-position: center center;
         background-color: white;
         background-size: 100%;
