--- a/hill/css/main.css
+++ b/hill/css/main.css
@@ -59,17 +59,21 @@ a {
 text-decoration:none;
 color:cadetblue;}
 
+form.calculate-route {
+    width: 400px;
+    max-width: 100%;
+    margin: 0 auto;
+}
 #from, #to {
-background-image: url(../img/banner.png);
-font-family: 'Futura';
-margin-left: 1.2em;
-width: 88%;
-max-width: 960px;
-background-size: 100%;
-height: 2.65em;
-border: none;
-border-radius: 3px;
-padding:0 2rem;
+    background-image: url(../img/banner.png);
+    font-family: 'Futura';
+    max-width: 578px;
+    background-size: 100%;
+    display: inline;
+    height: 2.65em;
+    border: none;
+    border-radius: 3px;
+    padding: 0 2rem;
 }
 
 #outputDiv {
@@ -126,6 +130,7 @@ p {
 
 body {
     font: 16px/26px "Futura";
+    background-color:#20231e;
 }
 html,body {
  width: 100%;
@@ -209,22 +214,19 @@ nav a:hover {
 }
 
 .main-container {
-    background-color:#20231e;
     width:100%;
     height:100%;
-    min-height:90em;
-    position:relative;
-    z-index:0;
+    max-width: 700px;
+    margin: 0 auto;
+    position: relative;
+    z-index: 0;
 }
 
-.fromlabel{
-    margin-left:10%;
+.fromlabel, .tolabel{
+    margin-left:50px;
     font-size:1.5em;
 }
-.tolabel {
-    margin-left:13%;
-    font-size:1.5em;
-}
+
 /* ===============
     ALL: IE Fixes
    =============== */
@@ -260,7 +262,7 @@ label {
 .ribbons {
     margin-top:2.8em;
     text-indent:1.3em;
-    max-width:95%;
+    width:100%;
 }
 
 .ribbons ul li:first-child {margin-left:3.9em;}
@@ -471,7 +473,8 @@ z-index:10;
 }
 .myplaces {
     position:fixed;
-    bottom:0em;
+    bottom:0;
+    left: 0;
     height:60px;
     width:100%;
     max-width:100%;
@@ -485,6 +488,8 @@ z-index:10;
     margin-right:2%;
     height:60px;
     float:left;
+    background-size: 40px;
+    background-position: center center;
     background-repeat: no-repeat;
     box-sizing:border-box;
     -webkit-box-sizing:border-box;
@@ -492,7 +497,7 @@ z-index:10;
 }
 
 .myplaces ul li a {
-    width:4em;
+    width:100%;
     height:4em;
 }
 
